Adding http_request tool to fetch latest docu

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,7 @@ dependencies = [
     "mcp",
     "notebook",
     "semver>=3.0.4",
-    "boto3",
-    "bedrock-agentcore"
+    "pyyaml"
 ]
 
 [project.scripts]
