--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,10 @@ dependencies = [
     "mcp",
     "notebook",
     "semver>=3.0.4",
-    "pyyaml"
+    "pyyaml",
+    "click>=8.2.1",
+    "questionary>=2.1.1",
+    "rich>=14.1.0",
 ]
 
 [project.scripts]
