--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ dependencies = [
     "mcp",
     "notebook",
     "semver>=3.0.4",
-    "pyyaml"
+    "pyyaml",
+    "rich>=13.0.0",
+    "textual>=6.1.0",
 ]
 
 [project.scripts]
