Clone oss repos into test

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,14 @@ samples/__pycache__/prompts.cpython-313.pyc
 src/__pycache__/
 .ipynb_checkpoints/
 .next
-config.yaml
-src/chat_ui/screens/__pycache__/
-src/chat_ui/widgets/__pycache__/
-src/chat_ui/__pycache__/
 test/pg-expense-prisma/node_modules/
 .kiro/
 logs/
 .claude/
 .chbuild/
+test/umami/
+test/cal.com/
+test/formbricks/
+test/analytics/
+test/HouseClick/
+eval_results.json
