--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,9 @@
 AWS_REGION=us-east-1
 AWS_PROFILE=default
 ENVIRONMENT=dev
+
+# Langfuse Configuration
+LANGFUSE_ENABLED=false
+LANGFUSE_SECRET_KEY=your_secret_key_here
+LANGFUSE_PUBLIC_KEY=your_public_key_here
+LANGFUSE_HOST=http://localhost:3000
