--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "questionary>=2.1.1",
     "rich>=14.1.0",
     "textual>=6.1.0",
+    "langfuse>=3.6.2",
 ]
 
 [project.scripts]
