--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "rich>=14.1.0",
     "textual>=6.1.0",
     "langfuse>=3.6.2",
+    "python-dotenv>=1.0.0",
 ]
 
 [project.scripts]
