Get ready for release

--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,38 @@
-AWS_REGION=us-east-1
-AWS_PROFILE=default
-ENVIRONMENT=dev
+# =====================================================
+# ClickHouse Build Environment Configuration
+# =====================================================
+# Copy this file to .env and fill in your actual values
+# Usage: cp .env.template .env
+#
+# 1. Never commit your .env file to version control
+# 2. Ensure .env is in .gitignore (already configured)
+# 3. AWS Bedrock must have Claude Sonnet 4.5 model access enabled
+# 4. Test your configuration with: uv run main.py --help
 
-# Langfuse Configuration
-LANGFUSE_ENABLED=false
-LANGFUSE_SECRET_KEY=your_secret_key_here
-LANGFUSE_PUBLIC_KEY=your_public_key_here
-LANGFUSE_HOST=http://localhost:3000
+# =====================================================
+# AWS Configuration (REQUIRED)
+# =====================================================
+# AWS credentials are required for Claude Sonnet 4.5 via Amazon Bedrock
+# You must have Bedrock access enabled in your AWS account
+
+# AWS Region where Bedrock is available
+# Common regions: us-east-1, us-west-2, eu-west-1
+# Verify Bedrock availability: https://docs.aws.amazon.com/bedrock/latest/userguide/what-is-bedrock.html
+AWS_REGION=us-east-1
+
+# AWS Profile name from ~/.aws/credentials
+# Set to 'default' to use your default AWS profile
+# Or specify a named profile if you have multiple AWS accounts
+AWS_PROFILE=default
+
+# Alternative: Use explicit AWS credentials instead of profile
+# Uncomment and set these if not using AWS_PROFILE
+# AWS_ACCESS_KEY_ID=your_access_key_here
+# AWS_SECRET_ACCESS_KEY=your_secret_key_here
+
+# =====================================================
+# Environment Configuration
+# =====================================================
+# Environment identifier for logging and debugging
+# Values: dev, staging, production
+ENVIRONMENT=production
