--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # Exclude build files from GitHub language statistics
 # These files were accidentally committed in 8e274ae21a867d927e075b6c4a897b6d619f0274
-test/pg-expense-prisma/.next/** linguist-generated=true
+eval_repos/pg-expense-prisma/.next/** linguist-generated=true
