--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,25 @@ dependencies = [
 
 [project.scripts]
 clickhouse-build = "main:main"
+
+[dependency-groups]
+dev = [
+    "pre-commit>=4.5.0",
+]
+
+[tool.mypy]
+python_version = "3.13"
+warn_return_any = false
+warn_unused_configs = true
+disallow_untyped_defs = false
+ignore_missing_imports = true
+no_implicit_optional = false
+check_untyped_defs = false
+allow_untyped_globals = true
+allow_untyped_calls = true
+allow_untyped_defs = true
+disable_error_code = ["var-annotated", "arg-type", "return-value", "assignment", "union-attr", "attr-defined", "annotation-unchecked"]
+
+[[tool.mypy.overrides]]
+module = "tests.*"
+ignore_errors = true
